--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -28,9 +28,10 @@ jobs:
       - name: Checkout
         uses: actions/checkout@v2
       - name: Install node
-        uses: actions/setup-node@v1
+        uses: actions/setup-node@v3
         with:
           node-version: '18.x'
+          cache: 'yarn'
       - name: Install Python
         uses: actions/setup-python@v2
         with:
@@ -46,6 +47,7 @@ jobs:
             pip-3.9-
             pip-
 
+
       - name: Get yarn cache directory path
         id: yarn-cache-dir-path
         run: echo "::set-output name=dir::$(yarn cache dir)"
@@ -57,7 +59,6 @@ jobs:
           key: yarn-${{ hashFiles('**/yarn.lock') }}
           restore-keys: |
             yarn-
-
       - name: Install dependencies
         run: python -m pip install -U jupyterlab~=3.0 jupyter_packaging~=0.7.9
       - name: Build the extension
