--- a/package.json
+++ b/package.json
@@ -50,6 +50,7 @@
     "dependencies": {
         "@emotion/react": "^11.14.0",
         "@emotion/sheet": "^1.4.0",
+        "@emotion/styled": "^11.14.0",
         "@fortawesome/fontawesome-svg-core": "6.2.0",
         "@fortawesome/free-solid-svg-icons": "6.2.0",
         "@fortawesome/react-fontawesome": "^0.2.0",
@@ -63,6 +64,8 @@
         "@jupyterlab/ui-components": "^4.3.4",
         "@lumino/signaling": "^2.1.3",
         "@lumino/widgets": "^2.5.0",
+        "@mui/icons-material": "^7.1.0",
+        "@mui/material": "^7.1.0",
         "@terraformer/wkt": "^2.1.2",
         "classnames": "^2.5.1",
         "install": "^0.13.0",
@@ -221,5 +224,6 @@
     "resolutions": {
         "@types/react-dom": "18.3.5",
         "@types/react": "^18.0.26"
-    }
+    },
+    "packageManager": "yarn@1.22.22+sha512.a6b2f7906b721bba3d67d4aff083df04dad64c399707841b7acf00f6b133b7ac24255f2652fa22ae3534329dc6180534e98d17432037ff6fd140556e2bb3137e"
 }
