--- a/tsconfig.json
+++ b/tsconfig.json
@@ -6,7 +6,10 @@
     "esModuleInterop": true,
     "incremental": true,
     "jsx": "react",
-    "lib": ["es2020", "dom"],
+    "lib": [
+      "es2020",
+      "dom"
+    ],
     "module": "esnext",
     "moduleResolution": "node",
     "noEmitOnError": true,
