--- a/package.json
+++ b/package.json
@@ -82,6 +82,7 @@
         "react-loader-spinner": "^6.1.6",
         "react-modal": "3.15.1",
         "react-select": "5.4.0",
+        "react-spinners": "^0.17.0",
         "react-tooltip": "~5.26.3",
         "react-virtualized": "^9.22.4",
         "react-window": "^1.8.11"
