--- a/package.json
+++ b/package.json
@@ -76,12 +76,13 @@
         "react": "^18.0.2",
         "react-datepicker": "4.8.0",
         "react-dom": "^18.0.2",
-        "react-hook-form": "^7.39.3",
+        "react-hook-form": "^7.53.1",
         "react-leaflet": "4.0.0",
         "react-leaflet-draw": "0.20.0",
         "react-loader-spinner": "^6.1.6",
         "react-modal": "3.15.1",
         "react-select": "5.4.0",
+        "react-spinners": "^0.17.0",
         "react-tooltip": "~5.26.3",
         "react-virtualized": "^9.22.4",
         "react-window": "^1.8.11"
@@ -108,7 +109,7 @@
         "@typescript-eslint/eslint-plugin": "^6.1.0",
         "@typescript-eslint/parser": "^6.1.0",
         "corepack": "^0.30.0",
-        "css-loader": "^6.7.1",
+        "css-loader": "^7.1.2",
         "eslint": "^8.36.0",
         "eslint-config-prettier": "^8.8.0",
         "eslint-plugin-prettier": "^5.0.0",
@@ -117,7 +118,7 @@
         "prettier": "^3.0.0",
         "rimraf": "^5.0.1",
         "source-map-loader": "^1.0.2",
-        "style-loader": "^3.3.1",
+        "style-loader": "^4.0.0",
         "stylelint": "^15.10.1",
         "stylelint-config-recommended": "^13.0.0",
         "stylelint-config-standard": "^34.0.0",
