--- a/.pre-commit-config.yaml
+++ b/.pre-commit-config.yaml
@@ -57,8 +57,11 @@ repos:
         language_version: '22.11.0'
 
   - repo: https://github.com/igorshubovych/markdownlint-cli
-    rev: v0.32.2
+    rev: v0.45.0
     hooks:
       - id: markdownlint
         language: node
         language_version: '22.11.0'
+        args: [
+            --disable=MD024 # Multiple headers with the same content
+          ]
