--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
     "name": "eodag-labextension",
-    "version": "5.3.0a1",
+    "version": "5.3.0a1.post1",
     "description": "Searching remote sensed imagery from various image providers",
     "keywords": [
         "jupyter",
